DO328/solutions/resilience-mesh/dr-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend-pool
spec:
  host: frontend
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 5
        maxRequestsPerConnection: 10
      tcp:
        maxConnections: 5
