DO328/solutions/resilience-mesh/dr-news.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: news-circuit
spec:
  host: news-resilience-mesh-news.apps.ocp4.example.com
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 5s
      baseEjectionTime: 10s
      maxEjectionPercent: 100
